@@ -13,6 +13,13 @@
 
 import sys, os
 
+try:
+    sys.path.insert(0, os.pardir)
+    from roundup import __version__ as roundupversion
+    sys.path.pop(0)
+except ImportError:
+    roundupversion = '(unknown version)'
+
 # If your extensions are in another directory, add it here. If the directory
 # is relative to the documentation root, use os.path.abspath to make it
 # absolute, like shown here.
@@ -46,9 +53,9 @@ copyright = u'2009, Richard Jones'
 # built documents.
 #
 # The short X.Y version.
-version = '1.4'
+version = '.'.join(roundupversion.split('.', 2)[:2])
 # The full version, including alpha/beta/rc tags.
-release = '1.4'
+release = roundupversion
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
